--- a/reports/spokenlanguage/template.tex
+++ b/reports/spokenlanguage/template.tex
@@ -4,11 +4,10 @@
 \usepackage{cite}
 
 \title{Paper Template for INTERSPEECH 2018}
-\name{Author Name$^1$, Co-author Name$^2$}
+\name{Dhruv Mishra}
 %The maximum number of authors in the author list is twenty. If the number of contributing authors is more than twenty, they should be listed in a footnote or in acknowledgement section, as appropriate.
 \address{
-  $^1$Author Affiliation\\
-  $^2$Co-author Affiliation}
+  IMS, Uni Stuttgart}
 \email{author@university.edu, coauthor@company.com}
 
 \begin{document}
@@ -28,13 +27,7 @@
 \end{abstract}
 \noindent\textbf{Index Terms}: speech recognition, human-computer interaction, computational paralinguistics
 
-\section{Introduction}
-
-This template can be found on the conference website. Templates are provided for Microsoft Word\textregistered, and \LaTeX. However, we highly recommend using \LaTeX when preparing your submission. Information for full paper submission is available on the conference website.
-
-\section{Page layout and style}
-
-Authors should observe the following rules for page layout. A highly recommended way to meet these requirements is to use a given template (Microsoft Word® or LaTeX) and check details against the corresponding example PDF file. Given templates, Microsoft Word\textregistered\ or \LaTeX, can be adapted/imported easily in other software such as LibreOffice, Apple Pages, Lua\LaTeX, and Xe\LaTeX, but please be careful to match the layout of the provided PDF example.
+\section{NLP on spoken documents without ASR}
 
 \subsection{Basic layout features}
 
